# astrix-LK

./: NVENC_ASYNC_FIX.md  README.md  antilag-bitrate-assessment.md  antilag-wgc-encoder-flow.md  antilag.md  d3dcap.md  denoise.md  docker-compose.yml  live-state.md  livekit-native.yaml  livekit-state.md  livekit.yaml  newLK.md  newLK_C.md  newUi.md  new_path.md  new_path_deco.md  nvenc_d11.md  project-state.md
.VSCodeCounter/2026-03-10_01-04-08/: details.md  diff-details.md  diff.txt  results.json  results.txt
.VSCodeCounter/2026-03-11_21-58-06/: details.md  diff-details.md  diff.csv  results.csv  results.json  results.txt
capture-benchmark/: Cargo.toml  README.md  benchmark_shared.md
capture-benchmark/src/: border.rs  cli.rs  d3d.rs  dxgi_capture.rs  foreground.rs  main.rs  overlay.rs  stats.rs  wgc_capture.rs
capture_fps_service_probe/: Cargo.toml  README.md
capture_fps_service_probe/src/: main.rs
client/: Cargo.toml  README.md  astrix_settings.json  build.rs  build_log.txt  build_output.txt  err.txt  nv12_to_rgba.hlsl  src.rar
client/.cargo/: config.toml
client/docs/: dxgi_encoder.md  phase0_results.md  phase6_validation.md
client/examples/: d3d11_nv12_test.rs  dxgi_adapters.rs  gpu_device_select.rs  mft_encoder_test.rs  mft_enum.rs  mft_inflight_probe.rs  nvenc_d11_smoke.rs  validate_mft_path.rs
client/include/astrix/: nvenc_d11_bridge.h
client/scripts/: build-webrtc-via-livekit.ps1  build-webrtc-windows.ps1  build-with-vs-env.ps1  compile-mft-debug.bat  compile-yuv-debug.bat  copy-webrtc-from-temp.ps1  fetch-libyuv-headers.ps1  fetch-webrtc-prebuilt.ps1  fix-webrtc-ninja.ps1  validate-phase6.ps1
client/src/: app.rs  bottom_panel.rs  channel_panel.rs  chat_panel.rs  console_panel.rs  crypto.rs  d3d11_gl_interop.rs  d3d11_i420.rs  d3d11_nv12.rs  d3d11_rgba.rs  d3d11_shared.rs  deep_links.rs  denoise.rs  dxgi_duplication.rs  encoded_h264.rs  gpu_device.rs  gpu_timeline.rs  guild_panel.rs  lib.rs  main.rs  member_panel.rs  mft_device.rs  mft_encoder.rs  minimal_dxgi_process.rs  net.rs  nvenc_d11.rs  nvenc_d11_bridge.cpp  nvenc_d11_bridge.rs  raw_frame.rs  screen_encoder.rs  state.rs  telemetry.rs  theme.rs  todo_actions.rs  ui.rs  voice.rs  voice_livekit.rs  windows_loopback.rs
client/src/components/: avatar.rs  buttons.rs  mod.rs
display_probe/: Cargo.toml  README.md  display_probe_dota_fullscreen.jsonl  display_probe_dota_fullscreen1.jsonl
display_probe/src/: main.rs
docs/: feature.md  vds-migration.md
driver_test/driver_probe/: README.md
driver_test/driver_probe/docs/: indirect_display_assessment.md
driver_test/driver_probe/scripts/: build_kmdod_debug_x64.ps1  enable_testsigning.ps1  install_kmdod_inf.ps1
driver_test/driver_probe/upstream/Windows-driver-samples/video/KMDOD/: bdd.cxx  bdd_ddi.cxx  bdd_dmm.cxx  bdd_errorlog.hxx  bdd_util.cxx
logs/: receiver log.txt  sender log.txt
server/: .cursorignore  .gitignore  docker-compose.yml  docker-compose.yml.bak-codex  go.sum  livekit.yaml
server/.VSCodeCounter/2026-03-10_01-04-08/: diff.md  results.csv  results.md
server/.VSCodeCounter/2026-03-11_21-58-06/: diff.md  diff.txt  results.md
server/.claude/: settings.local.json
server/docs/: media-webrtc.md
server/internal/httpserver/: server.go  server.go.bak-codex
server/internal/invites/: handlers.go
server/internal/media/: handlers.go
server/internal/members/: handlers.go
server/internal/messages/: handlers.go
server/internal/servers/: handlers.go
server/internal/store/: invites.go  server_admin.go  store.go
server/internal/users/: handlers.go
server/internal/voice/: livekit.go
server/internal/ws/: hub.go  user_events.go
server/server/: Dockerfile  README.md  go.mod
server/server/cmd/gen-livekit-token/: main.go
server/server/cmd/server/: main.go
server/server/internal/auth/: auth.go
server/server/internal/channels/: handlers.go
server/server/internal/config/: config.go
server/server/internal/httpserver/: server.go
server/server/internal/store/: store.go
server/server/internal/voice/: signaling.go  state.go  webhook.go
server/server/internal/ws/: hub.go
