[package]
name = "capture-benchmark"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
clap = { version = "4.4", features = ["derive"] }
csv = "1.3"
serde = { version = "1.0", features = ["derive"] }

[target.'cfg(windows)'.dependencies]
windows = { version = "0.58", features = [
    # Core Win32
    "Win32_Foundation",
    "Win32_Graphics_Direct3D",
    "Win32_Graphics_Direct3D11",
    "Win32_Graphics_Dxgi",
    "Win32_Graphics_Dxgi_Common",
    "Win32_Graphics_Gdi",
    "Win32_System_Com",
    "Win32_UI_WindowsAndMessaging",
    "Win32_System_LibraryLoader",
    "Win32_System_Threading",
    "Win32_Security",
    # WinRT support
    "Win32_System_WinRT",
    "Win32_System_WinRT_Graphics_Capture",
    "Win32_System_WinRT_Direct3D11",
    # Graphics Capture API
    "Graphics_Capture",
    # Foundation
    "Foundation",
    "Foundation_Collections",
    # Graphics DirectX
    "Graphics_DirectX",
    "Graphics_DirectX_Direct3D11",
    # Device info for LUID
    "Win32_Devices_Display",
] }

[profile.release]
opt-level = 3
lto = true
